--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=SpringSecurityApp
+spring.application.name=FirstSecurityApp
 
 # MySQL properties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -8,3 +8,7 @@ spring.datasource.password=root
 
 # Hibernate properties
 spring.jpa.properties.hibernate.show_sql=true
+
+#logging.level.ROOT = DEBUG
+#server.tomcat.accesslog.enabled=true
+#server.tomcat.accesslog.pattern=%t %a "%r" %s (%D ms)
